--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2189,6 +2189,12 @@ a {
   padding-right: 1.5rem;
   color: #6592e6;
 }
+.cid-sgufnxoknk .card-title {
+  text-align: left;
+}
+.cid-sgufnxoknk P {
+  text-align: left;
+}
 .cid-sgufpltTvZ {
   padding-top: 0rem;
   padding-bottom: 0rem;
